--- a/public_html/html/courses.html
+++ b/public_html/html/courses.html
@@ -85,9 +85,14 @@
                         <br />
                         <p>Intro Algebra Review: A Quick Refresher - Udacity (02/09/2014-03/30/2014)</p>
                         <br />
-                        <p>CS169.1x Software as a Service - BerkeleyX/edX (03/30/2014-ongoing)</p> 
+                        <p>CS169.1x Software as a Service - BerkeleyX/edX (03/30/2014-01/25/2015)</p> 
                         <br />
-                        <p>CS188.1x Artificial Intelligence - BerkeleyX/edX (01/10/2015-ongoing)</p> 
+                        <p>CS188.1x Artificial Intelligence - BerkeleyX/edX (02/06/2015-ongoing)</p> 
+						<br />
+						<p>Web Development - Udacity (02/05/2015-ongoing)</p> 
+						<br />
+						<p>LINK5.10x Data, Analytics, and Learning - UTArlingtonX/edX (02/05/2015-ongoing)</p> 
+						<br />
                     </div> 
                 </div><!--Cousers--> 
             </div><!--/Contend-->
