--- a/public_html/html/resume.html
+++ b/public_html/html/resume.html
@@ -82,8 +82,8 @@
                         <br />
                         <h4>Technologies and Techniques</h4>
                         <ul>
-                            <li><b>Proficient:</b> Java (JSE, JEE), C, SQL, HTML5, CSS3, Bootstrap, PL/SQL, PostgreSQL, h2, Design Patterns, UML, Agile, Lean, Scrum, TDD, JUnit, Git, Open Source, JSON, XML, Windows, Linux (Debian, Linux Mint).</li>
-                            <li><b>Familiar with:</b> JavaScript, Sass, Ruby, Scala, Continuous Delivery, BDD, Cucumber, development with fingerprints readers.</li>
+                            <li><b>Proficient:</b> Java (JSE, JEE), C, SQL, HTML5, CSS3, JavaScript, Bootstrap, PL/SQL, PostgreSQL, h2, Design Patterns, UML, Agile, Lean, Scrum, TDD, JUnit, Git, Cucumber​­JVM, Gradle, Open Source, JSON, XML, Windows, Linux (Debian, Linux Mint).</li>
+                            <li><b>Familiar with:</b> Ruby, Sass, AngularJS, Scala, Continuous Delivery, BDD, development with fingerprints readers.</li>
                         </ul>
                         <br />
                         <h4>Work experience</h4>
@@ -127,6 +127,17 @@
                             <li><a href="courses.html">MOOCs</a></li>
                         </ul>
                         <br />
+						<h4>Research areas</h4>
+						<ul>
+							<li>Learning</li>
+							<li>Productivity</li>
+							<li>Artificial Intelligence</li>
+							<li>Computer Graphics</li>
+							<li>Theoretical Computer Science</li>
+							<li>Software Development</li>
+							<li>Research</li>
+						</ul>
+						<br />
                         <h4>Other achievements outside of work</h4>
                         <p>Creation of MAD - Research methodology of high level based in software development principles.</p>
                         <ul>
